--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,17 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- Dados grandes (não versionar) ---
+*.db
+*.sqlite
+*.csv
+*.xlsx
+*.parquet
+*.zip
+*.tar.gz
+*.7z
+*.bak
+data/  
+
+
